experimental/ir/testdata/extend/proto3.proto.stderr.txt
error: extension range in "proto3"
  --> testdata/extend/proto3.proto:23:16
   |
23 |     extensions 1;
   |                ^
  ::: testdata/extend/proto3.proto:16:10
   |
16 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: extension numbers cannot be reserved in "proto3"

error: expected built-in options message, found message type `test.M`
  --> testdata/extend/proto3.proto:26:1
   |
26 | extend M {
   | ^^^^^^
  ::: testdata/extend/proto3.proto:16:10
   |
16 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: extendees in "proto3" files are restricted to extending
           `google.protobuf.*Options` message types

encountered 2 errors
